# fly-brain-evolve

./: .gitignore  CLAUDE.md  README.md  benchmark_fast.py  debug_full_chain.py  debug_full_chain_result.json  debug_single.py  debug_single_result.json  debug_units.py  debug_units_results.json  pyproject.toml  requirements.txt  run_attention_mnist.py  run_baseline_stdp.py  run_dopamine_evolution.py  run_dopamine_mnist.py  run_evolution.py  run_evolution_fast.py  run_evolved_vis.py  run_final_vis.py  run_hog_mnist.py  run_mnist_16x16.py  run_mnist_challenge.py  run_mnist_small.py  run_multipass_mnist.py  run_phase2_hybrid.py  run_phase3_hierarchical.py  run_phase3_staged.py  run_phase5_tuned.py  run_phase8_multimodal.py  run_phase9_novelty.py  run_phases_6_to_9.py  run_stdp_v2.py  run_sweep.py  run_threshold_sweep.py  run_visual_cortex_mnist.py  run_visual_test.py  tune_sparsity.py  tune_sparsity_results.json
configs/: default.yaml  experiment_binary.yaml
docs/: ROADMAP_AGI.md  ROADMAP_GROWING_BRAIN.md  masters_application_guide.md
docs/journal/: 2026-03-19_day1_baseline_simulation.md  2026-03-19_day1_dopamine_findings.md  2026-03-19_day1_dopamine_v1.md  2026-03-19_day1_evolution_complete.md  2026-03-19_day1_evolution_start.md  2026-03-19_day1_fast_simulator.md  2026-03-19_day1_full_explanation.md  2026-03-19_day1_project_setup.md  2026-03-19_day1_stdp_baseline.md  2026-03-19_day1_unit_bug_fix.md  2026-03-19_day1_visual_bottleneck.md  2026-03-19_hog_mnist_results.md  evolution_log.json  (+39 more)
tests/: test_connectome.py  test_evolution.py  test_integration.py  test_neurons.py
(+29 files in other folders)
